--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@data-ui/event-flow": "^0.0.8",
     "@data-ui/sparkline": "^0.0.49",
+    "@vx/responsive": "0.0.153",
     "babel-register": "^6.24.1",
     "bootstrap": "^3.3.6",
     "brace": "^0.10.0",
@@ -71,6 +72,7 @@
     "nvd3": "1.8.6",
     "po2json": "^0.4.5",
     "prop-types": "^15.6.0",
+    "re-resizable": "^4.3.0",
     "react": "^15.6.2",
     "react-ace": "^5.0.1",
     "react-addons-css-transition-group": "^15.6.0",
@@ -86,7 +88,6 @@
     "react-grid-layout": "^0.16.0",
     "react-map-gl": "^3.0.4",
     "react-redux": "^5.0.2",
-    "react-resizable": "^1.3.3",
     "react-select": "1.0.0-rc.10",
     "react-select-fast-filter-options": "^0.2.1",
     "react-sortable-hoc": "^0.6.7",
