--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -78,11 +78,12 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.4.2",
     "react-alert": "^2.3.0",
-    "react-beautiful-dnd": "^4.0.0",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-table": "^4.0.2",
     "react-color": "^2.13.8",
     "react-datetime": "2.9.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.6.2",
     "react-gravatar": "^2.6.1",
     "react-grid-layout": "^0.16.0",
