[webpack] setup lazy loading for all visualizations

--- a/superset/assets/.eslintrc
+++ b/superset/assets/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "airbnb",
-  "parserOptions":{
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": false,
+    "codeFrame": false,
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
     }
